[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["HellenWeb <artemkondratyev23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.16.1"
loguru = "^0.5.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
